--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <!-- <script type="module" src="./js/task-2.js"></script> -->
         <!-- <script type="module" src="./js/task-3.js"></script> -->
         <!-- <script type="module" src="./js/task-4.js"></script> -->
-        <script type="module" src="./js/task-5.js"></script>
+        <!-- <script type="module" src="./js/task-5.js"></script> -->
         <!-- <script type="module" src="./js/task-6.js"></script> -->
         <!-- <script type="module" src="./js/task-7.js"></script> -->
+        <!-- <script type="module" src="./js/task-8.js"></script> -->
         <!-- <script type="module" src="./js/autotest.js"></script> -->
         <!-- <script type="module" src="./js/taskwithmentor.js"></script> -->
     </body>
