--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <!-- <script type="module" src="./js/task-6.js"></script> -->
         <!-- <script type="module" src="./js/task-7.js"></script> -->
         <!-- <script type="module" src="./js/task-8.js"></script> -->
+        <!-- <script type="module" src="./js/task-9.js"></script> -->
         <!-- <script type="module" src="./js/autotest.js"></script> -->
-        <!-- <script type="module" src="./js/taskwithmentor.js"></script> -->
+        <script type="module" src="./js/taskwithmentor.js"></script>
     </body>
 </html>
